# xmlrw

./: CMakeLists.txt  Doxyfile.in  LICENSE
src/: CMakeLists.txt
src/xml/: finally.h  reader.cpp  reader.h  stringconvert.cpp  stringconvert.h  writer.cpp  writer.h  xmllite_errmsg.cpp  xmllite_errmsg.h
